--- a/Helperland/helperland1.0/helperland1.0.csproj
+++ b/Helperland/helperland1.0/helperland1.0.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Admin\" />
     <Folder Include="wwwroot\contactFiles\" />
   </ItemGroup>
 
